wip: auth0 part2 gui
