# api/src/server/mod.rs
@@ -21,9 +21,6 @@ where
 {
     // build our application with a route
     Router::new()
-        .route("/callback",
-            get(callback_get::<I, A>)
-        )
         .route("/hello",
             get(hello_get::<I, A>)
         )
@@ -34,87 +31,6 @@ where
             get(userinfo_get::<I, A>)
         )
         .with_state(api_impl)
-}
-
-
-#[tracing::instrument(skip_all)]
-fn callback_get_validation(
-  query_params: models::CallbackGetQueryParams,
-) -> std::result::Result<(
-  models::CallbackGetQueryParams,
-), ValidationErrors>
-{
-  query_params.validate()?;
-
-Ok((
-  query_params,
-))
-}
-/// CallbackGet - GET /callback
-#[tracing::instrument(skip_all)]
-async fn callback_get<I, A>(
-  method: Method,
-  host: Host,
-  cookies: CookieJar,
-  Query(query_params): Query<models::CallbackGetQueryParams>,
- State(api_impl): State<I>,
-) -> Result<Response, StatusCode>
-where
-    I: AsRef<A> + Send + Sync,
-    A: apis::default::Default,
-{
-
-      #[allow(clippy::redundant_closure)]
-      let validation = tokio::task::spawn_blocking(move ||
-    callback_get_validation(
-        query_params,
-    )
-  ).await.unwrap();
-
-  let Ok((
-    query_params,
-  )) = validation else {
-    return Response::builder()
-            .status(StatusCode::BAD_REQUEST)
-            .body(Body::from(validation.unwrap_err().to_string()))
-            .map_err(|_| StatusCode::BAD_REQUEST);
-  };
-
-  let result = api_impl.as_ref().callback_get(
-      method,
-      host,
-      cookies,
-        query_params,
-  ).await;
-
-  let mut response = Response::builder();
-
-  let resp = match result {
-                                            Ok(rsp) => match rsp {
-                                                apis::default::CallbackGetResponse::Status302_RedirectsTheUserToTheApplicationAfterSuccessfulAuthentication
-                                                => {
-                                                  let mut response = response.status(302);
-                                                  response.body(Body::empty())
-                                                },
-                                                apis::default::CallbackGetResponse::Status400_BadRequest
-                                                => {
-                                                  let mut response = response.status(400);
-                                                  response.body(Body::empty())
-                                                },
-                                                apis::default::CallbackGetResponse::Status500_ServerErrorDuringTokenExchange
-                                                => {
-                                                  let mut response = response.status(500);
-                                                  response.body(Body::empty())
-                                                },
-                                            },
-                                            Err(_) => {
-                                                // Application code returned an error. This should not happen, as the implementation should
-                                                // return a valid response.
-                                                response.status(500).body(Body::empty())
-                                            },
-                                        };
-
-                                        resp.map_err(|e| { error!(error = ?e); StatusCode::INTERNAL_SERVER_ERROR })
 }
 
 
