# openapi/example-openapi.yaml
@@ -16,31 +16,53 @@ paths:
                 properties:
                   message:
                     type: string
-  /callback:
-    get:
-      summary: Auth0 callback endpoint
-      description: Handles the Auth0 redirect after authentication and exchanges the authorization code for tokens.
-      parameters:
-        - name: code
-          in: query
-          required: true
-          description: Authorization code returned by Auth0.
-          schema:
-            type: string
-        - name: state
-          in: query
-          required: false
-          description: State parameter to prevent CSRF attacks.
-          schema:
-            type: string
-      responses:
-        '302':
-          description: Redirects the user to the application after successful authentication.
-        '400':
-          description: Bad request, missing or invalid parameters.
-        '500':
-          description: Server error during token exchange.
-
+#  /callback:
+#    get:
+#      summary: Auth0 callback endpoint
+#      description: Handles the Auth0 redirect after authentication and exchanges the authorization code for tokens.
+#      parameters:
+#        - name: code
+#          in: query
+#          required: true
+#          description: Authorization code returned by Auth0.
+#          schema:
+#            type: string
+#        - name: state
+#          in: query
+#          required: false
+#          description: State parameter to prevent CSRF attacks.
+#          schema:
+#            type: string
+#      responses:
+#        '302':
+#          description: Redirect after correct login
+#          headers:
+#            Location:
+#              description: URL redirect
+#              schema:
+#                type: string
+#            Set-Cookie:
+#              description: |
+#                HTTP cookies to store tokens on the client. Contains:
+#                - `access_token`: for authenticated requests
+#                - `id_token`: for identity verification
+#              schema:
+#                type: string
+#        '400':
+#          description: Bad request, missing or invalid parameters.
+#        '500':
+#          description: Server error during token exchange.
+#  /login:
+#    get:
+#      summary: Redirect to login page
+#      responses:
+#        '303':
+#          description: Redirect to external login page
+#          headers:
+#            Location:
+#              description: URL to redirect
+#              schema:
+#                type: string
   /logout:
     get:
       summary: User logout (redirect to Auth0 logout)
